@@ -51,7 +51,8 @@ geos_unit_SOURCES = geos_unit.cpp \
 	simplify/DouglasPeuckerSimplifierTest.cpp \
 	simplify/TopologyPreservingSimplifierTest.cpp \
 	util/UniqueCoordinateArrayFilterTest.cpp \
-	capi/GEOSCoordSeq.cpp
+	capi/GEOSCoordSeqTest.cpp	\
+	capi/GEOSSimplifyTest.cpp
 
 noinst_HEADERS = 			\
 	utility.h
